--- a/SV/Views/Shared/_Layout.cshtml
+++ b/SV/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RealStateForms" asp-action="Index">Formulario</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RealStateForms" asp-action="Index">Formularios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
