--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -39,41 +39,38 @@
                 <h5>Información de los Enajenante(s) o Causante(s)</h5>
                 <div class="row seller" hidden>
                     <div class="col-sm">
-                        <label for="rut">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rut" placeholder="Ingrese su rut" name="rut">
+                        <label for="rutSeller">RUT:</label>
+                        <input type="text" class="form-control form-control-inline" id="rutSeller" placeholder="Ingrese su rut" name="rutSeller">
                     </div>
                     <div class="col-sm">
-                        <label for="ownershipPercentage">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentage" placeholder="99.4" step="0.01" name="ownershipPercentage">
+                        <label for="ownershipPercentageSeller">% de Derecho:</label>
+                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageSeller" placeholder="99.4" step="0.01" name="ownershipPercentageSeller">
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnership">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
                     </div>
-                    <input type="hidden" name="enajenante" value="true">
-                    <input type="hidden" name="adquiriente" value="false">
+
                 </div>
                 <div class="row seller">
                     <div class="col-sm">
-                        <label for="rut">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rut" placeholder="Ingrese su rut" name="rut">
+                        <label for="rutSeller">RUT:</label>
+                        <input type="text" class="form-control form-control-inline" id="rutSeller" placeholder="Ingrese su rut" name="rutSeller">
                     </div>
                     <div class="col-sm">
-                        <label for="ownershipPercentage">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentage" placeholder="99.4" step="0.01" name="ownershipPercentage">
+                        <label for="ownershipPercentageSeller">% de Derecho:</label>
+                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageSeller" placeholder="99.4" step="0.01" name="ownershipPercentageSeller">
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnership">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
                     </div>
-                    <input type="hidden" name="enajenante" value="true">
-                    <input type="hidden" name="adquiriente" value="false">
                 </div>
             </div>
             <button class="btn-danger" type="button" id="add-seller">Agregar</button>
@@ -82,41 +79,37 @@
                 <h5>Información de los Adquiriente(s) o Heredero(s)</h5>
                 <div class="row heir" hidden>
                     <div class="col-sm">
-                        <label for="rut">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rut" placeholder="Ingrese su rut" name="rut">
+                        <label for="rutBuyer">RUT:</label>
+                        <input type="text" class="form-control form-control-inline" id="rutBuyer" placeholder="Ingrese su rut" name="rutBuyer">
                     </div>
                     <div class="col-sm">
-                        <label for="ownershipPercentage">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentage" placeholder="99.4" step="0.01" name="ownershipPercentage">
+                        <label for="ownershipPercentageBuyer">% de Derecho:</label>
+                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageBuyer" placeholder="99.4" step="0.01" name="ownershipPercentageBuyer">
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnership">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipBuyer">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
                     </div>
-                    <input type="hidden" name="enajenante" value="false">
-                    <input type="hidden" name="adquiriente" value="true">
                 </div>
                 <div class="row heir">
                     <div class="col-sm">
-                        <label for="rut">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rut" placeholder="Ingrese su rut" name="rut">
+                        <label for="rutBuyer">RUT:</label>
+                        <input type="text" class="form-control form-control-inline" id="rutBuyer" placeholder="Ingrese su rut" name="rutBuyer">
                     </div>
                     <div class="col-sm">
-                        <label for="ownershipPercentage">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentage" placeholder="99.4" step="0.01" name="ownershipPercentage">
+                        <label for="ownershipPercentageBuyer">% de Derecho:</label>
+                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageBuyer" placeholder="99.4" step="0.01" name="ownershipPercentageBuyer">
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnership">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipBuyer">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
                     </div>
-                    <input type="hidden" name="enajenante" value="false">
-                    <input type="hidden" name="adquiriente" value="true">
                 </div>
             </div>
             <button class="btn-danger" type="button" id="add-heir">Agregar</button>
