fix: meaningfull names

--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -75,9 +75,9 @@
             </div>
             <button class="btn-danger" type="button" id="add-seller">Agregar</button>
 
-            <div class="heirs">
+            <div class="buyers">
                 <h5>Información de los Adquiriente(s) o Heredero(s)</h5>
-                <div class="row heir" hidden>
+                <div class="row buyer" hidden>
                     <div class="col-sm">
                         <label for="rutBuyer">RUT:</label>
                         <input type="text" class="form-control form-control-inline" id="rutBuyer" placeholder="Ingrese su rut" name="rutBuyer">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-danger" type="button" id="add-heir">Agregar</button>
+            <button class="btn-danger" type="button" id="add-buyer">Agregar</button>
 
             <div class="form-group">
                 <label asp-for="Sheets" class="control-label">Fojas</label>
