fix: remove duplicated code

--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -48,29 +48,12 @@
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller" name="uncreditedOwnershipSeller">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
                     </div>
 
-                </div>
-                <div class="row seller">
-                    <div class="col-sm">
-                        <label for="rutSeller">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rutSeller" placeholder="Ingrese su rut" name="rutSeller">
-                    </div>
-                    <div class="col-sm">
-                        <label for="ownershipPercentageSeller">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageSeller" placeholder="99.4" step="0.01" name="ownershipPercentageSeller">
-                    </div>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            % de Derecho no Acreditado:
-                        </label>
-                    </div>
                 </div>
             </div>
             <button class="btn-danger" type="button" id="add-seller">Agregar</button>
@@ -88,24 +71,7 @@
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipBuyer">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            % de Derecho no Acreditado:
-                        </label>
-                    </div>
-                </div>
-                <div class="row heir">
-                    <div class="col-sm">
-                        <label for="rutBuyer">RUT:</label>
-                        <input type="text" class="form-control form-control-inline" id="rutBuyer" placeholder="Ingrese su rut" name="rutBuyer">
-                    </div>
-                    <div class="col-sm">
-                        <label for="ownershipPercentageBuyer">% de Derecho:</label>
-                        <input type="number" class="form-control form-control-inline" id="ownershipPercentageBuyer" placeholder="99.4" step="0.01" name="ownershipPercentageBuyer">
-                    </div>
-
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipBuyer">
+                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipBuyer" name="uncreditedOwnershipBuyer">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
