--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
+                        <input class="form-check-input" type="checkbox" value="true" id="uncreditedOwnershipSeller" name="uncreditedOwnershipSeller">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="uncreditedOwnershipSeller">
+                        <input class="form-check-input" type="checkbox" value="true" id="uncreditedOwnershipSeller" name="uncreditedOwnershipSeller">
                         <label class="form-check-label" for="flexCheckDefault">
                             % de Derecho no Acreditado:
                         </label>
