--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col">
-        <form asp-action="Create">
+        <form asp-action="Create" id="form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NatureOfTheDeed" class="control-label">CNE</label>
@@ -53,6 +53,7 @@
                             % de Derecho no Acreditado:
                         </label>
                     </div>
+                    <input type="hidden" id="uncreditedClickedSeller" name="uncreditedClickedSeller" value="false">
 
                 </div>
             </div>
