feat: now information of buyer is stored in db

--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -77,6 +77,7 @@
                             % de Derecho no Acreditado:
                         </label>
                     </div>
+                    <input type="hidden" id="uncreditedClickedBuyer" name="uncreditedClickedBuyer" value="false">
                 </div>
             </div>
             <button class="btn-danger" type="button" id="add-buyer">Agregar</button>
