--- a/SV/Views/Home/Privacy.cshtml
+++ b/SV/Views/Home/Privacy.cshtml
@@ -1,6 +1,41 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="container">
+    <h1>Consulta de Propietarios de un Predio</h1>
+    <form>
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="comuna" name="comuna" placeholder="Comuna">
+            </div>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="manzana" name="manzana" placeholder="Manzana">
+            </div>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="predio" name="predio" placeholder="Predio">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="year">Año:</label>
+            <select class="form-control" id="year" name="year"></select>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+</div>
+
+<script type="text/javascript">
+    // Seleccionamos el elemento "select" del campo de años
+    var yearSelect = document.getElementById("year");
+
+    // Obtenemos el año actual
+    var currentYear = new Date().getFullYear();
+
+    // Agregamos opciones al select para los años desde 2023 hasta 1900
+    for (var i = currentYear; i >= 1900; i--) {
+        var option = document.createElement("option");
+        option.value = i;
+        option.text = i;
+        yearSelect.add(option);
+    }
+</script>
