--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SV.Models.RealStateForm
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear Formulario";
 }
 
-<h1>Crear Formulario</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>RealStateForm</h4>
 <hr />
