--- a/SV/Views/Home/Privacy.cshtml
+++ b/SV/Views/Home/Privacy.cshtml
@@ -5,16 +5,16 @@
 
 <div class="container">
     <h1>@ViewData["Title"]</h1>
-    <form asp-action="MultiOwnerQuery" asp-controller="Home" method="post">
+    <form asp-action="Privacy" asp-controller="Home" method="get">
         <div class="form-group row">
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="comuna" name="comuna" placeholder="Comuna">
+                <input type="text" class="form-control" id="comuna" name="comuna" value="@ViewData["CurrentCommune"]" placeholder="Comuna">
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="manzana" name="manzana" placeholder="Manzana">
+                <input type="text" class="form-control" id="manzana" name="manzana" value="@ViewData["CurrentBlock"]"  placeholder="Manzana">
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="predio" name="predio" placeholder="Predio">
+                <input type="text" class="form-control" id="predio" name="predio" value="@ViewData["CurrentProperty"]"  placeholder="Predio">
             </div>
         </div>
         <div class="form-group">
