--- a/SV/Views/Home/Privacy.cshtml
+++ b/SV/Views/Home/Privacy.cshtml
@@ -66,7 +66,7 @@
                     @Html.DisplayFor(modelItem => item.InscriptionNumber)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.InscriptionDate.Date)
+                    @Html.DisplayFor(modelItem => item.Year)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.InscriptionDate)
