--- a/SV/Views/Home/Privacy.cshtml
+++ b/SV/Views/Home/Privacy.cshtml
@@ -22,7 +22,10 @@
             <label for="year">Año:</label>
             <select class="form-control" id="year" name="year"></select>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="btn-toolbar">
+            <button type="submit" class="btn btn-primary" id="submitBtn" style="margin-right:10px">Enviar</button>
+            <button type="button" class="btn btn-primary btn-danger" id="eraseFilterBtn">Borrar</button>
+        </div>
     </form>
 </div>
 
