--- a/SV/Views/Home/Privacy.cshtml
+++ b/SV/Views/Home/Privacy.cshtml
@@ -22,59 +22,73 @@
             <label for="year">Año:</label>
             <select class="form-control" id="year" name="year"></select>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="btn-toolbar">
+            <button type="submit" class="btn btn-primary" id="submitBtn" style="margin-right:10px">Enviar</button>
+            <button type="button" class="btn btn-primary btn-danger" id="eraseFilterBtn">Borrar</button>
+        </div>
     </form>
 </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                RUT
-            </th>
-            <th>
-               % de Derechos
-            </th>
-            <th>
-               Fojas
-            </th>
-            <th>
-                Nº de Inscripción
-            </th>
-            <th>
-                Año
-            </th>
-            <th>
-                Fecha de Inscripción
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
+
+        
+@{
+        if (Model != null)
+            {
+        foreach (var item in Model)
+
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Rut)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.OwnershipPercentage)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Sheets)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.InscriptionNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Year)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.InscriptionDate)
-                </td>
-            </tr>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            RUT
+                        </th>
+                        <th>
+                            % de Derechos
+                        </th>
+                        <th>
+                            Fojas
+                        </th>
+                        <th>
+                            Nº de Inscripción
+                        </th>
+                        <th>
+                            Año
+                        </th>
+                        <th>
+                            Fecha de Inscripción
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Rut)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OwnershipPercentage)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Sheets)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.InscriptionNumber)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Year)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.InscriptionDate)
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+                }
+            }
+            
         }
-    </tbody>
-</table>
+      
+
 
 
 
