refactor: privacy to multiowner

--- a/SV/Views/RealStateForms/Index.cshtml
+++ b/SV/Views/RealStateForms/Index.cshtml
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.InscriptionNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.AttentionNumber">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AttentionNumber">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AttentionNumber">Delete</a>
+       
+                <a asp-action="Details" asp-route-id="@item.AttentionNumber">Details</a> 
+           
             </td>
         </tr>
 }
