--- a/SV/Views/Shared/_Layout.cshtml
+++ b/SV/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RealStateForms" asp-action="Index">Formularios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MultiOwnerQuery">Filtrar Multipropietario</a>
                         </li>
                     </ul>
                 </div>
