--- a/SV/Views/RealStateForms/Details.cshtml
+++ b/SV/Views/RealStateForms/Details.cshtml
@@ -1,53 +1,53 @@
 ﻿@model SV.Models.RealStateForm
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>RealStateForm</h4>
+    <h4>Formulario de Bienes Raíces  |  N° de Atención: @Html.DisplayFor(model => model.AttentionNumber)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NatureOfTheDeed)
+            CNE
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NatureOfTheDeed)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Commune)
+           Comuna
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Commune)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Block)
+            Manzana
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Block)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Property)
+            Predio
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Property)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sheets)
+            Fojas
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sheets)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InscriptionDate)
+            Fecha Inscripción
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InscriptionDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InscriptionNumber)
+            Número Inscripción
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InscriptionNumber)
@@ -55,6 +55,56 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.AttentionNumber">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <h5>Enajenante(s) o Causante(s)</h5>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    RUT
+                </th>
+                <th>
+                    % de Derecho
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    algo
+                </td>
+                <td>
+                    algo
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div>
+    <h5>Adquiriente(s) o Heredero(s)</h5>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    RUT
+                </th>
+                <th>
+                    % de Derecho
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    algo
+                </td>
+                <td>
+                    algo
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div>
+    <!--<a asp-action="Edit" asp-route-id="@Model?.AttentionNumber">Edit</a> |-->
+    <a asp-action="Index">Volver a Formularios</a>
 </div>
