--- a/SV/Views/RealStateForms/Details.cshtml
+++ b/SV/Views/RealStateForms/Details.cshtml
@@ -65,6 +65,9 @@
                 <th>
                     % de Derecho
                 </th>
+                <th>
+                    % de Derecho no Acreditado
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -77,6 +80,9 @@
                 </td>
                 <td>
                         @Html.DisplayFor(modelItem => item.OwnershipPercentage)
+                </td>
+                <td>
+                        @Html.DisplayFor(modelItem => item.UncreditedOwnership)
                 </td>
             </tr>
                 }
@@ -94,6 +100,9 @@
                 <th>
                     % de Derecho
                 </th>
+                <th>
+                    % de Derecho no Acreditado
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -106,6 +115,9 @@
                 </td>
                 <td>
                         @Html.DisplayFor(modelItem => item.OwnershipPercentage)
+                </td>
+                <td>
+                        @Html.DisplayFor(modelItem => item.UncreditedOwnership)
                 </td>
             </tr>
                 }
