fix: syntaxis to c# standards

--- a/SV/Views/Home/MultiOwnerquery.cshtml
+++ b/SV/Views/Home/MultiOwnerquery.cshtml
@@ -74,7 +74,7 @@
                             @Html.DisplayFor(modelItem => item.InscriptionNumber)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.validityYearBegin)
+                            @Html.DisplayFor(modelItem => item.ValidityYearBegin)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.InscriptionDate)
