--- a/SV/Views/Home/MultiOwnerquery.cshtml
+++ b/SV/Views/Home/MultiOwnerquery.cshtml
@@ -9,13 +9,13 @@
     <form asp-action="MultiOwnerQuery" asp-controller="Home" method="get">
         <div class="form-group row">
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="comuna" name="comuna" value="@ViewData["CurrentCommune"]" placeholder="Comuna">
+                <input type="text" class="form-control" id="commune" name="commune" value="@ViewData["CurrentCommune"]" placeholder="Comuna">
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="manzana" name="manzana" value="@ViewData["CurrentBlock"]"  placeholder="Manzana">
+                <input type="text" class="form-control" id="block" name="block" value="@ViewData["CurrentBlock"]"  placeholder="Manzana">
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="predio" name="predio" value="@ViewData["CurrentProperty"]"  placeholder="Predio">
+                <input type="text" class="form-control" id="property" name="property" value="@ViewData["CurrentProperty"]"  placeholder="Predio">
             </div>
         </div>
         <div class="form-group">
