--- a/SV/Views/Home/MultiOwnerquery.cshtml
+++ b/SV/Views/Home/MultiOwnerquery.cshtml
@@ -8,14 +8,41 @@
     <h1>@ViewData["Title"]</h1>
     <form asp-action="MultiOwnerQuery" asp-controller="Home" method="get">
         <div class="form-group row">
+            <input type="hidden" id="selectedYear" name="electedYear" value="@ViewData["CurrentYear"]">
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="commune" name="commune" value="@ViewData["CurrentCommune"]" placeholder="Comuna">
+                <label>Comuna </label>
+                <select id="Commune" name="Commune" value="@ViewData["CurrentCommune"]">
+                    @{
+                        int counterOfCommunes = 0;
+                        @foreach (var commune in ViewBag.Communes)
+                        {
+                            if (counterOfCommunes == 0)
+                            {
+                                if (ViewData["CurrentCommune"] != "")
+                                {
+                                    <option selected="selected">@ViewData["CurrentCommune"]</option>
+                                    <option>@commune.Name</option>
+                                }
+                                else
+                                {
+                                    <option selected="selected">@commune.Name</option> 
+                                }
+                                counterOfCommunes += 1;
+                            }
+                            else
+                            {
+                                <option>@commune.Name</option>
+                            }
+
+                        }
+                    }
+                </select>
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="block" name="block" value="@ViewData["CurrentBlock"]"  placeholder="Manzana">
+                <input type="text" class="form-control" id="block" name="block" value="@ViewData["CurrentBlock"]" placeholder="Manzana">
             </div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="property" name="property" value="@ViewData["CurrentProperty"]"  placeholder="Predio">
+                <input type="text" class="form-control" id="property" name="property" value="@ViewData["CurrentProperty"]" placeholder="Predio">
             </div>
         </div>
         <div class="form-group">
