--- a/SV/Views/Home/MultiOwnerquery.cshtml
+++ b/SV/Views/Home/MultiOwnerquery.cshtml
@@ -56,10 +56,15 @@
     </form>
 </div>
     
-    @{
-        if (Model != null)
-            {
-        
+@{
+    if (Model != null)
+    {
+        if (Model.Count() == 0)
+        {
+            <p class="table">No hay registros para este rol en el período señalado</p>
+        }
+        else
+        {
             <table class="table">
                 <thead>
                     <tr>
@@ -84,36 +89,35 @@
                     </tr>
                 </thead>
                 <tbody>
-                @foreach (var item in Model)
+                    @foreach (var item in Model)
 
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Rut)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OwnershipPercentage)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Sheets)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.InscriptionNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ValidityYearBegin)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.InscriptionDate)
-                        </td>
-                    </tr>
-                }
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Rut)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OwnershipPercentage)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Sheets)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.InscriptionNumber)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ValidityYearBegin)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.InscriptionDate)
+                            </td>
+                        </tr>
+                    }
                 </tbody>
             </table>
-               
-            }
-            
-        }
+             }   
+        }  
+    }
       
 
 
