--- a/SV/Views/Home/MultiOwnerquery.cshtml
+++ b/SV/Views/Home/MultiOwnerquery.cshtml
@@ -11,7 +11,8 @@
             <input type="hidden" id="selectedYear" name="electedYear" value="@ViewData["CurrentYear"]">
             <div class="col-sm-10">
                 <label>Comuna </label>
-                <select id="Commune" name="Commune" value="@ViewData["CurrentCommune"]">
+                <input type="text" name="Commune" list="List" >
+                <datalist id="List" name="Commune" value="@ViewData["CurrentCommune"] >
                     @{
                         int counterOfCommunes = 0;
                         @foreach (var commune in ViewBag.Communes)
@@ -20,12 +21,12 @@
                             {
                                 if (ViewData["CurrentCommune"] != "")
                                 {
-                                    <option selected="selected">@ViewData["CurrentCommune"]</option>
-                                    <option>@commune.Name</option>
+                                    <option selected="selected" value="@ViewData["CurrentCommune"]">@ViewData["CurrentCommune"]</option>
+                                    <option value="@commune.Name">@commune.Name</option>
                                 }
                                 else
                                 {
-                                    <option selected="selected">@commune.Name</option> 
+                                    <option selected="selected" value="@ViewData["CurrentCommune"]">@commune.Name</option>
                                 }
                                 counterOfCommunes += 1;
                             }
@@ -36,7 +37,7 @@
 
                         }
                     }
-                </select>
+                </datalist>
             </div>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="block" name="block" value="@ViewData["CurrentBlock"]" placeholder="Manzana">
