feat: delete and duplicate forms

--- a/SV/Views/RealStateForms/Index.cshtml
+++ b/SV/Views/RealStateForms/Index.cshtml
@@ -69,7 +69,8 @@
             <td>
        
                 <a asp-action="Details" asp-route-id="@item.AttentionNumber">Details</a> 
-           
+                    <a asp-action="Delete" asp-route-id="@item.AttentionNumber">Delete</a>
+
             </td>
         </tr>
 }
