--- a/SV/Views/RealStateForms/Create.cshtml
+++ b/SV/Views/RealStateForms/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="col">
         <form asp-action="Create" id="form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            <input asp-for="Valid" type = "hidden" class="form-control" value ="1" />
             <div class="form-group">
                 <label asp-for="NatureOfTheDeed" class="control-label">CNE</label>
                 <select id="NatureOfTheDeed" name="NatureOfTheDeed">
